--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
 TOKEN="" # token of the bot
 MAIN_CHAT= # ID of main chat of CR, starting with -100
 LOGS= # ID of logs channel of CR, starting with -100
-AUTHORISIED_CHATS="" # chats that are connected to the bot and/or from with you dont want to get notifications
+AUTHORISIED_CHATS="0" # ID of chat/chats that are connected to the bot and/or from with you dont want to get notifications. Make sure that theres at least 1 number in this. Several IDs can be added with ', ' between them.
